i added a contact button

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,6 +97,7 @@
     <footer>
         <h6>CONTACT US</h6>
         <h3>Let's talk and make <br> something great</h3>
+        <button>CONTACT US</button>
     </footer>
     
 </body>
